[gd_scene load_steps=3 format=3 uid="uid://drg0c08wj0px6"]

[ext_resource type="Script" path="res://scripts/GraphRect.gd" id="1_88yod"]
[ext_resource type="Script" path="res://scripts/fc1layer_scene.gd" id="1_av1ud"]

[node name="FC1LayerScene" type="Node2D"]
script = ExtResource("1_av1ud")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.941176, 0.941176, 0.941176, 1)

[node name="GraphRect" type="ColorRect" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 624.0
offset_bottom = 624.0
script = ExtResource("1_88yod")

[node name="ItrLabel" type="Label" parent="."]
offset_left = 645.0
offset_top = 24.0
offset_right = 730.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Iteration: 0"

[node name="WeightLabel" type="Label" parent="."]
offset_left = 645.0
offset_top = 50.0
offset_right = 730.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "[b, w1, w2]: [0, 0, 0]"

[node name="LossLabel" type="Label" parent="."]
offset_left = 645.0
offset_top = 76.0
offset_right = 730.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Loss = N/A"

[node name="HelpLabel_1" type="Label" parent="."]
offset_left = 645.0
offset_top = 107.0
offset_right = 835.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "※ a = b + w1*x1 + w2*x2"

[node name="HelpLabel_2" type="Label" parent="."]
offset_left = 645.0
offset_top = 133.0
offset_right = 835.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "※ y = af(a) = sigmoid(a) = 1/(1 + exp(-a))"

[node name="HelpLabel_3" type="Label" parent="."]
offset_left = 645.0
offset_top = 159.0
offset_right = 835.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "※ Loss = 1/BN * 1/2 * ∑(yi - ti)^2"

[node name="HelpLabel_4" type="Label" parent="."]
offset_left = 645.0
offset_top = 185.0
offset_right = 919.0
offset_bottom = 211.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "※ BN: バッチデータ数"

[node name="InitButton" type="Button" parent="."]
offset_left = 1098.0
offset_top = 24.0
offset_right = 1132.0
offset_bottom = 55.0
text = "Init"

[node name="Train1Button" type="Button" parent="."]
offset_left = 1030.0
offset_top = 76.0
offset_right = 1130.0
offset_bottom = 107.0
text = "Train 1 Step"

[connection signal="pressed" from="InitButton" to="." method="_on_init_button_pressed"]
[connection signal="pressed" from="Train1Button" to="." method="_on_train_1_button_pressed"]
